# mask-engine

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/noirdoc/: __init__.py  namespace.py  sdk.py
src/noirdoc/daemon/: client.py  paths.py  protocol.py  server.py  spawn.py
src/noirdoc/detection/: ensemble.py  flair_recognizer.py  model_manager.py  presidio_detector.py
src/noirdoc/file_analysis/: body_walker.py  mime.py  models.py  pipeline.py  reconstruction.py  xlsx_inference.py
src/noirdoc/file_analysis/extractors/: docx_ext.py  ocr.py  pdf.py
src/noirdoc/file_reidentification/: service.py
src/noirdoc/mappings/: store.py
src/noirdoc/mappings/backends/: __init__.py  file.py  redis_backend.py
src/noirdoc/pseudonymization/: system_prompt.py
src/noirdoc/reidentification/: engine.py
tests/: test_cli.py  test_gliner_detector.py  test_integration_pipeline.py  test_namespace.py  test_presidio_detector.py  test_reidentification.py  test_sdk_xlsx.py
tests/daemon/: test_fallback.py  test_path_trust.py  test_protocol.py  test_spawn.py  test_version_handshake.py
tests/file_analysis/: test_pdf_extractor.py  test_pipeline.py
tests/mappings/: test_backends.py
tests/pseudonymization/: test_system_prompt.py
