[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "noirdoc"
dynamic = ["version"]
description = "Local PII redaction and pseudonymization for documents."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [
    { name = "Antonio Maiolo" },
]
maintainers = [
    { name = "Nextaim GmbH", email = "hello@noirdoc.de" },
]
keywords = [
    "pii",
    "redaction",
    "pseudonymization",
    "anonymization",
    "privacy",
    "gdpr",
    "presidio",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
]

# Baseline: `pip install noirdoc`
# Presidio-only detection + all file extractors + reversible mapper + CLI.
# No ML weight downloads required on first run.
dependencies = [
    "pydantic>=2.0",
    "structlog>=25.0.0",
    "cryptography>=46.0.0",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "spacy>=3.8",
    "pypdfium2>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "defusedxml>=0.7.1",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
    "click>=8.1.0",
]

[project.optional-dependencies]
# `pip install noirdoc[full]` — ensemble detection (GLiNER + Flair).
# Large ML weights; downloaded on first use or via `noirdoc models pull`.
full = [
    "gliner>=0.2.25",
    "flair>=0.14",
]

# `pip install noirdoc[redis]` — distributed mapper backend.
redis = [
    "redis[hiredis]>=7.0.0",
]

# `pip install noirdoc[dev]` — contributor tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff==0.15.14",
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "fakeredis>=2.21.0",
]

[project.scripts]
noirdoc = "noirdoc.cli:main"
noirdoc-daemon = "noirdoc.daemon.server:main"

[project.urls]
Homepage      = "https://noirdoc.de"
Repository    = "https://github.com/nextaim-de/noirdoc"
Documentation = "https://github.com/nextaim-de/noirdoc#readme"
Issues        = "https://github.com/nextaim-de/noirdoc/issues"
Changelog     = "https://github.com/nextaim-de/noirdoc/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Untagged checkouts (e.g. CI on a branch) resolve to a PEP 440 dev version
# derived from the most recent tag. This fallback only kicks in when git
# history is missing entirely (shallow clone without tags).
fallback_version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/noirdoc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/noirdoc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (loading ML models)"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "TID", "RUF"]
ignore = [
    "E501",    # line length is enforced by the formatter
    "RUF002",  # en dashes etc. in docstrings are intentional prose punctuation
    "RUF003",  # en dashes etc. in comments are intentional prose punctuation
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["noirdoc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Third-party libs without type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "gliner.*",
    "flair.*",
    "pytesseract.*",
    "pypdfium2.*",
]
ignore_missing_imports = true
